<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kayıt Ekranı"
        android:textSize="45sp"
        android:gravity="center_horizontal"
    />
    <EditText
        android:id="@+id/edt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/ad"
        android:hint="@string/ad"
        android:ems="10"
        android:inputType="text"
    />
    <EditText
        android:id="@+id/edt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/soyad"
        android:hint="@string/soyad"
        android:ems="10"
        android:inputType="text" />
    <EditText
        android:id="@+id/edt_kullanici_adi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/kAdi"
        android:hint="@string/kAdi"
        android:ems="10"
        android:inputType="text" />
    <EditText
        android:id="@+id/edt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/mail"
        android:hint="@string/mail"
        android:ems="10"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/edt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/sifre"
        android:hint="@string/sifre"
        android:ems="10"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kayit"
        android:ems="10"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        />
    <TextView
        android:id="@+id/txt_giris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zaten üye misiniz ? Giriş Yapın."
        />
</LinearLayout>